--- a/mysite/spotifyWrapped/static/spotifyWrapped/home.css
+++ b/mysite/spotifyWrapped/static/spotifyWrapped/home.css
@@ -229,6 +229,29 @@ header {
     transition: transform 0.2s ease, box-shadow 0.2s ease, background-color 0.2s ease;
 }
 
+
+.share-buttons {
+    display: flex;
+    gap: 10px;
+    justify-content: center;
+    margin-top: 10px;
+}
+
+.social-button {
+    background-color: #1DB954;
+    color: white;
+    padding: 10px 20px;
+    border-radius: 5px;
+    text-decoration: none;
+    font-size: 14px;
+    transition: background-color 0.3s ease;
+}
+
+.social-button:hover {
+    background-color: #14833B;
+}
+
+
 .time-button:hover, .close-button:hover {
     background: linear-gradient(135deg, #ffcc33, #ffe680); /* Brighter hover effect */
     transform: translateY(-3px) scale(1.05); /* Lift effect */
