cleaned up transitions

--- a/mysite/spotifyWrapped/templates/spotifyWrapped/slideshow.html
+++ b/mysite/spotifyWrapped/templates/spotifyWrapped/slideshow.html
@@ -28,7 +28,13 @@
 
         <div class="slide transition-slide">
             <div class="card">
-                <h2>Up Next: Average Daily Listening Time</h2>
+                <div class="transition-content">
+                    <h2 class="animated-text">Get Ready For: Average Daily Listening Time</h2>
+                    <div class="animation-container">
+                        <div class="circle"></div>
+                        <div class="wave"></div>
+                    </div>
+                </div>
             </div>
         </div>
         
@@ -42,10 +48,15 @@
         </div>
     </div>
 </div>
-
 <div class="slide transition-slide">
     <div class="card">
-        <h2>Up Next: Sound Town</h2>
+        <div class="transition-content">
+            <h2 class="animated-text">Coming Up Next: Sound Town</h2>
+            <div class="animation-container">
+                <div class="circle"></div>
+                <div class="wave"></div>
+            </div>
+        </div>
     </div>
 </div>
 <!-- Sound Town Slide -->
@@ -60,10 +71,15 @@
 
 <div class="slide transition-slide">
     <div class="card">
-        <h2>Up Next: Listening Character</h2>
+        <div class="transition-content">
+            <h2 class="animated-text">Coming Up Next: Listening Character</h2>
+            <div class="animation-container">
+                <div class="circle"></div>
+                <div class="wave"></div>
+            </div>
+        </div>
     </div>
 </div>
-
 <!-- Listening Character Slide -->
 <div class="slide">
     <div class="card">
@@ -76,7 +92,13 @@
 
 <div class="slide transition-slide">
     <div class="card">
-        <h2>Up Next: Top Songs</h2>
+        <div class="transition-content">
+            <h2 class="animated-text">Coming Up Next: Top Songs</h2>
+            <div class="animation-container">
+                <div class="circle"></div>
+                <div class="wave"></div>
+            </div>
+        </div>
     </div>
 </div>
 
@@ -100,7 +122,13 @@
 
 <div class="slide transition-slide">
     <div class="card">
-        <h2>Up Next: Top Artists</h2>
+        <div class="transition-content">
+            <h2 class="animated-text">Coming Up Next: Top Artists</h2>
+            <div class="animation-container">
+                <div class="circle"></div>
+                <div class="wave"></div>
+            </div>
+        </div>
     </div>
 </div>
 
@@ -122,7 +150,13 @@
 </div>
 <div class="slide transition-slide">
     <div class="card">
-        <h2>Up Next: Music Persona</h2>
+        <div class="transition-content">
+            <h2 class="animated-text">Coming Up Next: Music Persona</h2>
+            <div class="animation-container">
+                <div class="circle"></div>
+                <div class="wave"></div>
+            </div>
+        </div>
     </div>
 </div>
 
