implementing about team webpage

--- a/mysite/spotifyWrapped/templates/spotifyWrapped/home.html
+++ b/mysite/spotifyWrapped/templates/spotifyWrapped/home.html
@@ -101,7 +101,7 @@
     <footer class="footer-section">
         <div class="contact-dev">
             <h2>Contact the Dev Team</h2>
-            <p>Questions? <a href="mailto:jlee4103@gatech.edu"><i class="fas fa-envelope"></i> Email Us</a></p>
+            <p>Questions? <a href="{% url 'spotifyWrapped:dev_team' %}"><i class="fas fa-envelope"></i> Meet the Team</a></p>
         </div>
     </footer>
 
