--- a/mysite/spotifyWrapped/static/spotifyWrapped/slideshow.css
+++ b/mysite/spotifyWrapped/static/spotifyWrapped/slideshow.css
@@ -35,17 +35,16 @@ header h1 {
     display: block;
     opacity: 1;
     transform: translateY(0);
+    border-radius: 15px;
 }
 
 
 .card {
-    width: 600px; /* Fixed width for all slides */
     min-height: 250px; /* Minimum height for smaller slides */
     padding: 20px;
     margin: 0 auto;
     background-color: #0d1117;
     border-radius: 15px;
-    box-shadow: 0 6px 15px rgba(0, 0, 0, 0.4);
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -340,7 +339,7 @@ button:disabled {
     display: none;
     text-align: center;
     animation: fadeIn 1s ease-in-out;
-    background: linear-gradient(120deg, #4facfe, #00f2fe);
+    background: transparent;
     color: white;
     position: relative;
     overflow: hidden;
@@ -372,7 +371,7 @@ button:disabled {
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    width: 300px;
+    width: 100%;
     height: 300px;
     z-index: 1;
     overflow: hidden;
